[package]
name = "hypercpu"
description = "Distributed symbolic computation"
authors = ["Carlos Kieliszewski"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/carlosskii/hypercpu"
repository = "https://github.com/carlosskii/hypercpu"
documentation = "https://docs.rs/hypercpu"
readme = "README.md"
keywords = ["distributed", "symbolic", "computation", "hypercpu"]
categories = ["mathematics", "algorithms"]
version = "0.0.2"
edition = "2021"

[dependencies]
async-trait = "0.1.68"

[dev-dependencies]
tokio = { version = "1.28.0", features = ["test-util", "macros"] }
