[package]
name = "distcpu"
description = "Distributed symbolic computation"
authors = ["Carlos Kieliszewski"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/frqubit/distcpu"
repository = "https://github.com/frqubit/distcpu"
documentation = "https://docs.rs/distcpu"
readme = "README.md"
keywords = ["distributed", "symbolic", "computation", "hypercpu"]
categories = ["mathematics", "algorithms"]
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.68"

[dev-dependencies]
tokio = { version = "1.28.0", features = ["test-util", "macros"] }
